feat(preview): 添加自动刷新功能并优化预览页面
- 在预览页面添加自动刷新开关，用户可选择是否开启自动刷新
- 新增手动刷新按钮，用于在关闭自动刷新时手动更新预览内容
- 优化了预览页面的 UI 和交互，包括更新提示信息和按钮样式
- 调整了 Vite 配置中的 API 代理地址
- 移除了 ask-ai 组件中未使用的 eslint 注释

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -68,7 +68,7 @@
     "zh": "中文"
   },
   "preview": {
-    "backToEditor": "Back to Editor",
+    "backToEditor": "Back to editor",
     "refreshPreview": "Refresh",
     "copy": "Copy",
     "copyTooltip": "Copy HTML",
@@ -80,11 +80,17 @@
     "copyFailed": "Failed to copy HTML.",
     "downloadSuccess": "HTML downloaded successfully!",
     "downloadFailed": "Failed to download HTML.",
-    "saveToDB": "Save Template",
-    "saveToDBTooltip": "Save as Template",
-    "templatesList": "Templates List",
-    "templatesListTooltip": "View Saved Templates",
-    "templateLoaded": "Template loaded successfully!"
+    "saveToDB": "Save template",
+    "saveToDBTooltip": "Save as template",
+    "templatesList": "Templates list",
+    "templatesListTooltip": "View saved templates",
+    "templateLoaded": "Template loaded successfully!",
+    "autoRefresh": "Auto Refresh",
+    "autoRefreshOn": "Auto refresh enabled",
+    "autoRefreshOff": "Auto refresh disabled",
+    "disableAutoRefresh": "Disable auto refresh",
+    "enableAutoRefresh": "Enable auto refresh",
+    "manualRefreshTooltip": "Click to manually refresh preview"
   },
   "common": {
     "cancel": "Cancel",
