--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -78,6 +78,7 @@
     "history": "History",
     "conversationHistory": "Conversation History",
     "clearHistory": "Clear History",
+    "clearHistoryTitle": "Clear All History",
     "confirmClearHistory": "Are you sure you want to clear all conversation history?",
     "historyClearedSuccess": "History cleared successfully",
     "noHistory": "No conversation history",
@@ -92,7 +93,14 @@
     "messageCopied": "Message copied",
     "loadPrompt": "Use This Prompt",
     "promptLoaded": "Prompt loaded",
-    "emptyHistoryTip": "Start a conversation to create your first record"
+    "emptyHistoryTip": "Start a conversation to create your first record",
+    "deleteMessage": "Delete message",
+    "deleteMessageTitle": "Delete Message",
+    "confirmDeleteMessage": "Are you sure you want to delete this message?",
+    "confirmDelete": "Confirm delete?",
+    "messageDeleted": "Message deleted",
+    "editMessage": "Edit message",
+    "copyToPrompt": "Copy to input"
   },
   "toast": {
     "contentRestored": "Previous HTML content restored from local storage.",
@@ -135,7 +143,10 @@
   "common": {
     "cancel": "Cancel",
     "save": "Save",
-    "close": "Close"
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No"
   },
   "saveTemplate": {
     "title": "Save HTML Template",
