--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -78,6 +78,7 @@
     "history": "历史记录",
     "conversationHistory": "对话历史",
     "clearHistory": "清空历史",
+    "clearHistoryTitle": "清空所有历史",
     "confirmClearHistory": "确定要清空所有对话历史吗？",
     "historyClearedSuccess": "历史记录已清空",
     "noHistory": "暂无对话历史",
@@ -92,7 +93,14 @@
     "messageCopied": "消息已复制",
     "loadPrompt": "使用此提示词",
     "promptLoaded": "提示词已加载",
-    "emptyHistoryTip": "开始对话，创建您的第一条记录"
+    "emptyHistoryTip": "开始对话，创建您的第一条记录",
+    "deleteMessage": "删除此消息",
+    "deleteMessageTitle": "删除消息",
+    "confirmDeleteMessage": "确定要删除这条消息吗？",
+    "confirmDelete": "确认删除？",
+    "messageDeleted": "消息已删除",
+    "editMessage": "编辑此消息",
+    "copyToPrompt": "复制到输入框"
   },
   "toast": {
     "contentRestored": "从本地存储恢复了之前的 HTML 内容。",
@@ -135,7 +143,10 @@
   "common": {
     "cancel": "取消",
     "save": "保存",
-    "close": "关闭"
+    "close": "关闭",
+    "confirm": "确认",
+    "yes": "是",
+    "no": "否"
   },
   "saveTemplate": {
     "title": "保存HTML模板",
