docs(README): 更新项目运行说明
- 修改"启动开发服务器"为"开发模式运行"
- 更新开发模式运行命令为"npm run start:dev"
- 移除"构建项目"和"启动生产服务器"两个小节
- 新增"生产模式运行,构建完前端再启动后端服务"小节
- 更新生产模式运行命令为"npm run build && npm run start"

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -74,6 +74,8 @@
     "optimizePrompt": "Optimize Prompt",
     "promptOptimized": "Prompt optimized successfully!",
     "generate": "Generate",
+    "stopGeneration": "Stop Generation",
+    "generationStopped": "Generation stopped",
     "showPreview": "Show Preview",
     "history": "History",
     "conversationHistory": "Conversation History",
@@ -100,7 +102,12 @@
     "confirmDelete": "Confirm delete?",
     "messageDeleted": "Message deleted",
     "editMessage": "Edit message",
-    "copyToPrompt": "Copy to input"
+    "copyToPrompt": "Copy to input",
+    "newConversation": "New Conversation",
+    "keepCurrentDesign": "Do you want to keep the current design?",
+    "startingNewConversation": "Starting new conversation with current design",
+    "startingFreshConversation": "Starting fresh conversation with default template",
+    "generatedCode": "Generated code"
   },
   "toast": {
     "contentRestored": "Previous HTML content restored from local storage.",
@@ -138,7 +145,9 @@
     "disableAutoRefresh": "Disable auto refresh",
     "enableAutoRefresh": "Enable auto refresh",
     "manualRefreshTooltip": "Click to manually refresh preview",
-    "moreActions": "More Actions"
+    "moreActions": "More Actions",
+    "autoRefreshEnabled": "Auto refresh enabled",
+    "autoRefreshDisabled": "Auto refresh disabled"
   },
   "common": {
     "cancel": "Cancel",
@@ -146,7 +155,9 @@
     "close": "Close",
     "confirm": "Confirm",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "copy": "Copy",
+    "copied": "Copied"
   },
   "saveTemplate": {
     "title": "Save HTML Template",
