--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -74,6 +74,8 @@
     "optimizePrompt": "优化提示词",
     "promptOptimized": "提示词优化成功！",
     "generate": "生成",
+    "stopGeneration": "停止生成",
+    "generationStopped": "已停止生成",
     "showPreview": "查看预览",
     "history": "历史记录",
     "conversationHistory": "对话历史",
@@ -100,7 +102,12 @@
     "confirmDelete": "确认删除？",
     "messageDeleted": "消息已删除",
     "editMessage": "编辑此消息",
-    "copyToPrompt": "复制到输入框"
+    "copyToPrompt": "复制到输入框",
+    "newConversation": "新建对话",
+    "keepCurrentDesign": "是否保留当前设计？",
+    "startingNewConversation": "正在使用当前设计开始新对话",
+    "startingFreshConversation": "正在使用默认模板开始新对话",
+    "generatedCode": "生成的代码"
   },
   "toast": {
     "contentRestored": "从本地存储恢复了之前的 HTML 内容。",
@@ -138,7 +145,9 @@
     "disableAutoRefresh": "关闭自动刷新",
     "enableAutoRefresh": "开启自动刷新",
     "manualRefreshTooltip": "点击手动刷新预览",
-    "moreActions": "更多操作"
+    "moreActions": "更多操作",
+    "autoRefreshEnabled": "自动刷新已启用",
+    "autoRefreshDisabled": "自动刷新已禁用"
   },
   "common": {
     "cancel": "取消",
@@ -146,7 +155,9 @@
     "close": "关闭",
     "confirm": "确认",
     "yes": "是",
-    "no": "否"
+    "no": "否",
+    "copy": "复制",
+    "copied": "已复制"
   },
   "saveTemplate": {
     "title": "保存HTML模板",
