feat(settings): 添加 OpenAI 连接测试和环境变量配置
- 新增 /api/check-env 和 /api/test-connection API 端点
- 在设置页面添加 API Key、Base URL 和 Model 输入框
- 实现连接测试功能，显示测试结果
- 更新多语言文案，增加相关提示信息

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -15,6 +15,14 @@
     "templateTab": "Templates",
     "modelTab": "Model Parameters",
     "applySettings": "Apply Settings",
+    "configured": "Configured",
+    "notConfigured": "Not Configured",
+    "verified": "Verified",
+    "testConnection": "Test Connection",
+    "testing": "Testing...",
+    "testSuccess": "Connection Successful",
+    "testFailed": "Connection Failed",
+    "testError": "Test Error",
     "modelParams": {
       "title": "Model Parameters",
       "maxTokens": "Maximum Tokens (max_tokens)",
@@ -24,7 +32,11 @@
       "defaultValues": "Default values: max_tokens = 64000, temperature = 0. These settings can also be configured as defaults in environment variables.",
       "precise": "Precise (0)",
       "balanced": "Balanced (1)",
-      "creative": "Creative (2)"
+      "creative": "Creative (2)",
+      "apiKeyPlaceholder": "Enter your OpenAI API Key",
+      "apiKeyDesc": "Custom API key will override server's default. Leave empty to use server's API key.",
+      "baseUrlDesc": "Custom Base URL endpoint. Default is https://api.openai.com/v1",
+      "modelDesc": "Model to use for AI generation. Default is gpt-4o."
     },
     "templates": {
       "framework": "Select Framework",
@@ -113,7 +125,7 @@
     "contentRestored": "Previous HTML content restored from local storage.",
     "remixLoaded": "Remix content loaded successfully.",
     "remixFailed": "Failed to load remix content.",
-    "templateLoaded": "Template {name} loaded successfully",
+    "templateLoaded": "Template {{name}} loaded successfully",
     "templateLoadFailed": "Failed to load template",
     "templateLoadError": "Error loading template"
   },
