--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -10,21 +10,33 @@
   "settings": {
     "title": "配置",
     "aiInfo": "AI 信息",
-    "maxTokenLimit": "最大 Token 限制",
-    "configHint": "可通过环境变量配置 OpenAI 的模型和 API 地址。请参考项目的 .env.example 文件。",
-    "templateTab": "模板选择",
+    "maxTokenLimit": "最大标记数限制",
+    "configHint": "OpenAI模型和API URL可以通过环境变量配置。参见项目中的.env.example文件。",
+    "templateTab": "模板",
     "modelTab": "模型参数",
     "applySettings": "应用设置",
+    "configured": "已配置",
+    "notConfigured": "未配置",
+    "verified": "已验证",
+    "testConnection": "测试连接",
+    "testing": "测试中...",
+    "testSuccess": "连接成功",
+    "testFailed": "连接失败",
+    "testError": "测试错误",
     "modelParams": {
-      "title": "模型参数配置",
-      "maxTokens": "最大生成长度 (max_tokens)",
-      "maxTokensDesc": "控制模型生成的最大标记数。较大的值可以生成更长的回复，但可能需要更长的处理时间。",
-      "temperature": "创造性程度 (temperature)",
-      "temperatureDesc": "控制输出的随机性。较低的值生成更确定性的内容，较高的值生成更有创意的内容。",
+      "title": "模型参数",
+      "maxTokens": "最大标记数 (max_tokens)",
+      "maxTokensDesc": "控制生成的最大标记数。较大的值允许更长的响应，但可能需要更多的处理时间。",
+      "temperature": "创造性水平 (temperature)",
+      "temperatureDesc": "控制输出的随机性。较低的值产生更确定性的内容，较高的值产生更有创造性的内容。",
       "defaultValues": "默认值：max_tokens = 64000，temperature = 0。这些设置也可以在环境变量中配置为默认值。",
       "precise": "精确 (0)",
       "balanced": "平衡 (1)",
-      "creative": "创意 (2)"
+      "creative": "创造性 (2)",
+      "apiKeyPlaceholder": "输入您的OpenAI API密钥",
+      "apiKeyDesc": "自定义API密钥将覆盖服务器的默认设置。留空以使用服务器的API密钥。",
+      "baseUrlDesc": "自定义API基础URL。默认为https://api.openai.com/v1",
+      "modelDesc": "用于AI生成的模型。默认为gpt-4o。"
     },
     "templates": {
       "framework": "选择框架",
@@ -113,7 +125,7 @@
     "contentRestored": "从本地存储恢复了之前的 HTML 内容。",
     "remixLoaded": "成功加载 Remix 内容。",
     "remixFailed": "加载 Remix 内容失败。",
-    "templateLoaded": "已加载 {name} 模板",
+    "templateLoaded": "已加载 {{name}} 模板",
     "templateLoadFailed": "无法加载模板",
     "templateLoadError": "加载模板时出错"
   },
