docs(README): 更新中文文档并添加 Vercel 部署指南
- 在 README.md 中增加英文文档链接和中文切换
- 更新 DeepSite 的描述，强调支持各类大语言模型
- 添加 Vercel 部署指南，包括一键部署按钮和环境变量配置说明
- 增加多语言支持的说明，明确当前支持中英文

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -5,7 +5,8 @@
   },
   "header": {
     "new": "Reset",
-    "resetTooltip": "Reset Editor"
+    "resetTooltip": "Reset Editor",
+    "modelNotConfigured": "Model Not Configured"
   },
   "settings": {
     "title": "Configuration",
