feat(server): 添加 IP 访问频率限制功能
- 在服务器端实现了 IP 访问频率限制，以防止滥用和拒绝服务攻击
- 新增 IP_RATE_LIMIT 环境变量用于配置每小时最大请求次数
- 实现了中间件来检查每个 IP 的访问频率，并在超出限制时返回 429 错误
- 在 API 日志中添加了访问频率信息，便于监控和调试
- 客户端增加了对 429 错误的特殊处理，显示合适的错误消息

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -200,6 +200,14 @@
   },
   "errors": {
     "optimizePromptFailed": "Failed to optimize prompt",
-    "optimizationFailed": "Failed to optimize prompt"
+    "optimizationFailed": "Failed to optimize prompt",
+    "rateLimitExceeded": "Too many requests. Please try again later.",
+    "rateLimitExceededWithTime": "Too many requests. Please try again in {{minutes}} minutes.",
+    "aiRequestFailed": "An error occurred while requesting AI",
+    "processingResponseFailed": "Failed to process response from server",
+    "aiResponseError": "Error processing AI response"
+  },
+  "success": {
+    "aiResponseSuccess": "AI responded successfully"
   }
 } 
